--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,11 @@
     <version>1.5</version>
     <build>
 
+        <sourceDirectory>src</sourceDirectory>
+
         <resources>
             <resource>
-                <includes>
-                    <include>log4j.properties</include>
-                </includes>
+                <directory>resources</directory>
             </resource>
         </resources>
 
@@ -75,6 +75,11 @@
             <artifactId>apache-log4j-extras</artifactId>
             <version>1.2.17</version>
             </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>apache-log4j-extras</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
 
     </dependencies>
